<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Vocable</string>
    <string name="select_something">Select something below to speak.</string>
    <string name="phrases_page_number">Page %1$d of %2$d</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="my_sayings_empty"><b>Your sayings will appear\nhere.</b>\n\nNavigate to the keyboard, type something\n then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_handset_port"><b>Your sayings will appear\nhere.</b>\n\nNavigate to the keyboard, type something then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_handset_land"><b>Your sayings will appear here.</b>\n\nNavigate to the keyboard, type something\n then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_settings"><b>You don’t have any sayings saved yet. Select the “+” in the top right to add something.</b></string>
    <string name="custom_category_empty"><b>You don\'t have any phrases saved yet.</b></string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_developers">Contact Developers</string>
    <string name="version" translatable="false">V %s</string>
    <string name="settings_head_tracking">Head Tracking</string>
    <string name="settings_dialog_title">Leaving the app</string>
    <string name="settings_dialog_message">You\'re about to be taken outside the app. You may lose head tracking control.</string>
    <string name="settings_dialog_continue">Continue</string>
    <string name="settings_dialog_cancel">Cancel</string>
    <string name="settings_reset_dialog_message">Are you sure you want to reset Vocable to default settings? This action cannot be undone.</string>
    <string name="settings_reset_dialog_confirm">Reset</string>
    <string name="settings_edit_saying">My Sayings</string>
    <string name="settings_edit_categories">Categories and Phrases</string>
    <string name="settings_selection_mode">Selection Mode</string>
    <string name="settings_reset_app">Reset App</string>
    <string name="settings_options_voice">Voice</string>
    <string name="reset_voice_title">Reset Voice</string>
    <string name="reset_voice_dialog_message">Are you sure you want to reset your voice selection to the default? This action cannot be undone.</string>
    <string name="reset_sensitivity_title">Reset Timing and Sensitivity</string>
    <string name="reset_sensitivity_dialog_message">Are you sure you want to reset hover time and cursor sensitivity to their defaults? This action cannot be undone.</string>
    <string name="reset_selection_mode_title">Reset Selection Mode</string>
    <string name="reset_selection_mode_dialog_message">Are you sure you want to reset Selection Mode to the default? This action cannot be undone.</string>
    <string name="reset_categories_title">Reset Categories</string>
    <string name="reset_categories_dialog_message">Are you sure you want to reset category order and visibility, and remove any categories you\'ve added? This action cannot be undone.</string>
    <string name="reset_phrases_title">Reset Phrases</string>
    <string name="reset_phrases_label">Phrases</string>
    <string name="reset_category_phrases_dialog_message">Are you sure you want to reset the phrases in this category to their defaults and remove any you\'ve added or edited? This action cannot be undone.</string>
    <string name="reset_settings_footer_voice">Resets your voice selection to the device default.</string>
    <string name="reset_settings_footer_sensitivity">Resets hover time and cursor sensitivity to their defaults.</string>
    <string name="reset_settings_footer_selection_mode">Resets Selection Mode to enabled (the default).</string>
    <string name="reset_settings_footer_categories">Resets category order and visibility, and removes any categories you\'ve added.</string>
    <string name="reset_settings_footer_phrases">Resets all phrases to their defaults and removes any phrases you\'ve added or edited.</string>
    <string name="reset_settings_reset_selected">Reset Selected</string>
    <string name="reset_settings_reset_everything">Reset Everything</string>
    <string name="reset_settings_selected_dialog_title">Reset Selected Settings</string>
    <string name="reset_settings_selected_dialog_message">Are you sure you want to reset the selected settings to their defaults? This action cannot be undone.</string>
    <string name="selection_mode_title">Selection Mode</string>
    <string name="close_voice_selection">Close Change Voice</string>
    <string name="selected">Selected</string>
    <string name="voice_empty_title">No Voices</string>
    <string name="voice_empty_description">No voices that match your language and region settings are installed.</string>
    <string name="voice_preview_sample">Hello, this is Vocable, %1$s.</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_settings_change_voice">Change Voice</string>
    <string name="voice_settings_preview_content_description">Preview voice</string>
    <string name="voice_settings_stop_preview_content_description">Stop voice preview</string>
    <string name="voice_settings_footer">Additional voices and voice quality enhancements may be available for download in your device\'s Settings.</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="error_move_closer">Please move closer to the device.</string>
    <string name="head_tracking_paused_message">Head tracking is paused.\nMove your head to resume.</string>
    <string name="keyboard_select_letters">Start typing…</string>
    <string name="saved_successfully">Saved to %1s</string>
    <string name="removed_successfully">Removed from %1s</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Removed phrases cannot be restored.</string>
    <string name="new_phrase_saved">New phrase saved</string>
    <string name="contiue_editing">Continue editing</string>
    <string name="discard">Discard</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="back_warning">Going back before saving will clear any edits made.</string>
    <string name="duplicate_phrase">Sorry, this phrase name already exists. Please try a different name.</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="category_created">Category Created</string>
    <string name="duplicate_category">Sorry, this category name already exists. Please try a different name.</string>
    <string name="timing_sensitivity_title">Timing and Sensitivity</string>
    <string name="hover_time_text">Hover Time</string>
    <string name="cursor_sensitivity_text">Cursor Sensitivity</string>
    <string name="hover_time_amount_text">
        <xliff:g example="5" id="time">%s</xliff:g> seconds
    </string>
    <string name="hover_time_one_text">1 second</string>
    <string name="cursor_sensitivity_low">Low</string>
    <string name="cursor_sensitivity_medium">Medium</string>
    <string name="cursor_sensitivity_high">High</string>
    <string name="category_123">123</string>
    <string name="category_123_yes">Yes</string>
    <string name="category_123_no">No</string>
    <string name="category_123_0" translatable="false">0</string>
    <string name="category_123_1" translatable="false">1</string>
    <string name="category_123_2" translatable="false">2</string>
    <string name="category_123_3" translatable="false">3</string>
    <string name="category_123_4" translatable="false">4</string>
    <string name="category_123_5" translatable="false">5</string>
    <string name="category_123_6" translatable="false">6</string>
    <string name="category_123_7" translatable="false">7</string>
    <string name="category_123_8" translatable="false">8</string>
    <string name="category_123_9" translatable="false">9</string>
    <string name="edit_categories_title">Categories and Phrases</string>
    <string name="edit_categories_button_number" translatable="false">%1d. %2s</string>
    <string name="edit_category_show_category_text">Show Category</string>
    <string name="edit_category_remove_category_text">Remove Category</string>
    <string name="removed_cant_be_restored">Removed categories can not be restored.</string>
    <string name="preset_general" formatted="false">General</string>
    <string name="preset_basic_needs" formatted="false">Basic Needs</string>
    <string name="preset_personal_care" formatted="false">Personal Care</string>
    <string name="preset_conversation" formatted="false">Conversation</string>
    <string name="preset_environment" formatted="false">Environment</string>
    <string name="preset_user_keypad" formatted="false">123</string>
    <string name="preset_user_favorites" formatted="false">My Sayings</string>
    <string name="preset_recents" formatted="false">Recents</string>
    <string name="preset_need_restroom" formatted="false">I need to go to the restroom</string>
    <string name="preset_im_thirsty" formatted="false">I am thirsty</string>
    <string name="preset_im_hungry" formatted="false">I am hungry</string>
    <string name="preset_im_cold" formatted="false">I am cold</string>
    <string name="preset_im_hot" formatted="false">I am hot</string>
    <string name="preset_im_tired" formatted="false">I am tired</string>
    <string name="preset_im_fine" formatted="false">I am fine</string>
    <string name="preset_im_good" formatted="false">I am good</string>
    <string name="preset_im_uncomfortable" formatted="false">I am uncomfortable</string>
    <string name="preset_im_in_pain" formatted="false">I am in pain</string>
    <string name="preset_im_finished" formatted="false">I am finished</string>
    <string name="preset_want_lie_down" formatted="false">I want to lie down</string>
    <string name="preset_want_sit_up" formatted="false">I want to sit up</string>
    <string name="preset_hello" formatted="false">Hello</string>
    <string name="preset_good_morning" formatted="false">Good morning</string>
    <string name="preset_good_evening" formatted="false">Good evening</string>
    <string name="preset_pleased_to_meet_you" formatted="false">Pleased to meet you</string>
    <string name="preset_how_is_day" formatted="false">How is your day?</string>
    <string name="preset_how_are_you" formatted="false">How are you?</string>
    <string name="preset_how_is_it_going" formatted="false">How\'s it going?</string>
    <string name="preset_how_was_your_weekend" formatted="false">How was your weekend?</string>
    <string name="preset_goodbye" formatted="false">Goodbye</string>
    <string name="preset_okay" formatted="false">Okay</string>
    <string name="preset_bad" formatted="false">Bad</string>
    <string name="preset_good" formatted="false">Good</string>
    <string name="preset_that_makes_sense" formatted="false">That makes sense</string>
    <string name="preset_i_like_it" formatted="false">I like it</string>
    <string name="preset_please_stop" formatted="false">Please stop</string>
    <string name="preset_i_do_not_agree" formatted="false">I do not agree</string>
    <string name="preset_please_repeat" formatted="false">Please repeat what you said</string>
    <string name="preset_please" formatted="false">Please</string>
    <string name="preset_thank_you" formatted="false">Thank you</string>
    <string name="rename_category">Rename Category</string>
    <string name="show_category">Show Category</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="remove_category">Remove Category</string>
</resources>