<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:columnCount="@integer/settings_options_columns"
    android:rowCount="@integer/settings_options_rows">

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/edit_sayings_button"
        style="@style/SettingsOptionButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/settings_edit_saying" />

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/edit_categories_button"
        style="@style/SettingsOptionButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/settings_edit_categories" />

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/timing_sensitivity_button"
        style="@style/SettingsOptionButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/settings_timing_sensitivity" />

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/reset_app_button"
        style="@style/SettingsOptionButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:text="@string/settings_reset_app" />

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/selection_mode_button"
        style="@style/SettingsOptionButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/settings_selection_mode" />
  
</GridLayout>