<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/SettingsTheme"
    tools:background="@color/colorPrimaryDark">

    <com.willowtree.vocable.customviews.VocableImageButton
        android:id="@+id/edit_options_back_button"
        style="@style/CloseButton"
        android:layout_width="@dimen/settings_close_button_width"
        android:layout_height="@dimen/settings_close_button_height"
        android:layout_marginStart="@dimen/settings_close_button_start_margin"
        android:layout_marginTop="@dimen/settings_close_button_top_margin"
        android:scaleType="center"
        android:src="@drawable/category_back_button_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_title"
        style="@style/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_category_title_margin_top"
        android:ellipsize="end"
        android:text="@string/settings"
        android:lines="1"
        app:layout_constraintStart_toEndOf="@id/edit_options_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="My Jokes" />

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/rename_category_button"
        style="@style/IndividualCategoryEditButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/rename_category"
        app:layout_constraintStart_toStartOf="@id/edit_options_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title"/>

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/show_category_button"
        style="@style/IndividualCategoryEditButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:text="@string/show_category"
        app:layout_constraintStart_toStartOf="@id/edit_options_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rename_category_button"/>

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/edit_phrases_button"
        style="@style/IndividualCategoryEditButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/edit_phrases"
        app:layout_constraintStart_toStartOf="@id/edit_options_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_category_button"/>

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/remove_category_button"
        style="@style/RemoveCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/remove_category"
        app:layout_constraintStart_toStartOf="@id/edit_options_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phrases_button"/>

    <com.willowtree.vocable.customviews.SettingsButton
        android:id="@+id/edit_category_pager_back_button"
        android:layout_width="@dimen/edit_paging_button_width"
        android:layout_height="@dimen/edit_paging_button_height"
        android:layout_marginStart="@dimen/paging_button_margin"
        android:layout_marginBottom="@dimen/edit_paging_button_bottom_margin"
        android:background="@drawable/button_default_background"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/phrases_back_button_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edit_category_page_number"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/edit_page_number_margin"
        android:layout_marginEnd="@dimen/edit_page_number_margin"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/phrases_page_number_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/edit_category_pager_forward_button"
        app:layout_constraintEnd_toStartOf="@+id/edit_category_pager_forward_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/edit_category_pager_back_button"
        app:layout_constraintTop_toTopOf="@id/edit_category_pager_forward_button"
        tools:text="Page 1 of 2" />

    <com.willowtree.vocable.customviews.VocableImageButton
        android:id="@+id/edit_category_pager_forward_button"
        android:layout_width="@dimen/edit_paging_button_width"
        android:layout_height="@dimen/edit_paging_button_height"
        android:layout_marginEnd="@dimen/paging_button_margin"
        android:layout_marginBottom="@dimen/edit_paging_button_bottom_margin"
        android:background="@drawable/button_default_background"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/phrases_forward_button_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>
